# PatagoniaMet

./: .gitignore  .pre-commit-config.yaml  Basins_Attributes.R  Basins_delimitation.R  Basins_delimitation.ipynb  Bias_Correction_PP.R  Bias_Correction_PP1.R  Bias_Correction_PP2.R  Bias_Correction_T2M.R  Budyko.R  Covariables_RF.R  Data_Consistency.R  Data_Consistency_PP.R  Data_Consistency_Q.R  Data_Consistency_T2M.R  Data_Extent.R  Data_Preproccesing.R  Data_extent.ipynb  Downscaling_PP_T2M.R  Extent_Reanalysis.R  Figure5.R  Postprocessing.ipynb  Potential_Evaporation.ipynb  README.md  Raster_to_nc.R  TUWmodel_calibration.R  TUWmodel_extraction.R  TUWmodel_input.R  TUWmodel_model.R  TUWmodel_output.R  Validation_PET.R  Validation_PP.R  Validation_T2M.R  Valitation_T2M.R  config.yml  environment.yml  pyproject.toml
.opencode/plans/: plan.md
Figures/: Figure4.R  Figure5.R  Figure6.R  Figure7.R  Figure8.R  Figure9.R  FigureS1.R  FigureS2.R  FigureS3.R  FigureS4.R
bias_correction/: Bias_Correction_PP2.R
evaluation/: TUWmodel_input.R
patagoniaMet/core/: resample.py
patagoniaMet/processors/qc/: q.py
processing/: Covariables_RF.R  Data_extent.ipynb  Potential_Evaporation.ipynb
quality_check/: Data_Consistency_PET.R  Data_Consistency_Q.R  Data_Consistency_T2M.R
src/: TimeResample.R
tests/test_core/: test_resample.py
tests/test_processors/qc/: test_q.py
